<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Revalue</string>
    <string name="title_activity_main">Revalue</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="action_add_favorite">Add favorite</string>
    <string name="action_remove_favorite">Remove favorite</string>
    <string name="action_map">Map</string>
    <string name="action_share">Share</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_search">Search</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_logout">Logout</string>
    <string name="title_activity_insert">Insert new item</string>
    <string name="action_list">List</string>
    <string name="hint_title">Insert a title</string>
    <string name="hint_description">Insert a description</string>
    <string name="hint_category">Select a category</string>
    <string name="title">Title</string>
    <string name="required_title">Title is required</string>
    <string name="description">Description</string>
    <string name="required_description">Description is required</string>
    <string name="category">Category</string>
    <string name="required_category">Category is required</string>
    <string name="display_location">Display your location on the map</string>
    <string name="picture">Picture</string>
    <string name="action_send">Send</string>
    <string name="search_filters">Search filters</string>
    <string name="cancel">Cancel</string>
    <string name="distance">Distance</string>
    <string name="facebook_app_id" translatable="false">1556315897995518</string>
    <string name="google_client_id" translatable="false" tools:ignore="TypographyDashes">20530864566-0nludnpa9t2rdvffluns01fb23c9j6fm.apps.googleusercontent.com</string>
    <string name="google_key" translatable="false">AIzaSyDDIOWU043bRgg82OkMlsHJkUbS3YkSMhM</string>
    <string name="call_failed">Call to server failed</string>
    <string name="login_canceled">Login process canceled</string>
    <string name="login_failed">Login process failed</string>
    <string name="provider_facebook">Facebook</string>
    <string name="provider_google">Google</string>
    <string name="text_filter_title_empty">No filter</string>
    <string name="text_filter_category_empty">All categories</string>
    <string name="km">km</string>
    <string name="clear">Clear</string>
    <string name="required_picture">Picture is required</string>
    <string name="item_validation_failed">Please check form validation and retry</string>
    <string name="share_with">Share with</string>
    <string name="nav_personal">My items</string>
    <string name="content_provider_authority" translatable="false">it.returntrue.revalue.provider</string>
    <string name="file_provider_authority" translatable="false">it.returntrue.revalue.fileprovider</string>
    <string name="loading">Loading</string>
    <string name="waiting_gps_fix">Waiting for a GPS fix…</string>
    <string name="generic_error">An error occurred</string>
    <string name="authenticating_user">Authenticating user…</string>
    <string name="no_access_location_permission">No access location permission</string>
    <string name="no_results_found">No results found</string>
    <string name="check_connection">Please check internet connection</string>
    <string name="could_not_share_item">Could not share item</string>
    <string name="favorite_item_added">Favorite item added</string>
    <string name="could_not_add_favorite_item">Could not add favorite item</string>
    <string name="favorite_item_removed">Favorite item removed</string>
    <string name="could_not_remove_favorite_item">Could not remove favorite item</string>
    <string name="revalue_item">Revalue item</string>
    <string name="confirm_revalue_item">Have you really revalued this item?</string>
    <string name="could_not_revalue_item">Could not revalue item</string>
    <string name="remove_item">Remove item</string>
    <string name="confirm_remove_item">Do you really want to remove this item?</string>
    <string name="could_not_remove_item">Could not remove item</string>
    <string name="could_not_read_pictures">Can\'t read pictures from gallery</string>
    <string name="take_picture">Take picture</string>
    <string name="choose_from_library">Choose from library</string>
    <string name="add_picture">Add picture</string>
    <string name="item_saved">Item saved</string>
    <string name="enter_message">Enter your message</string>
    <string name="action_set_revalued">Set item as revalued</string>
    <string name="action_set_removed">Set item as removed</string>
    <string name="messages">Messages</string>
    <string name="could_not_get_categories">Could not get categories</string>
    <string name="could_not_get_items">Could not get items</string>
    <string name="could_not_get_item">Could not get item</string>
    <string name="could_not_save_item">Could not save item</string>
    <string name="could_not_register_messaging_token">Could not connect to messaging system</string>
    <string name="avatar">Avatar</string>
    <string name="cover_image">Cover image</string>
    <string name="search_filter">Search filter</string>
    <string name="search_category">Search category</string>
    <string name="search_location">Search location</string>
    <string name="picture_preview">Picture preview</string>
    <string name="distance_50">50 km</string>
    <string name="distance_100">100 km</string>
    <string name="distance_200">200 km</string>
    <string name="item_location">%1$s / %2$d km</string>
    <string name="play_service_unavailable">Google Play Services must be installed</string>
    <string name="uploading_data">Uploading data to server…</string>
    <string name="you">You</string>
</resources>