<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:title="@string/nav_search"
            android:icon="@drawable/ic_search_black_24dp" />
        <item
            android:id="@+id/nav_favorites"
            android:title="@string/nav_favorites"
            android:icon="@drawable/ic_favorite_black_24dp" />
        <item
            android:id="@+id/nav_personal"
            android:title="@string/nav_personal"
            android:icon="@drawable/ic_person_pin_black_24dp" />
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp" />
    </group>
</menu>