<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ui.InsertFragment"
        tools:showIn="@layout/activity_insert">
        <LinearLayout
            android:id="@+id/layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/label_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="12sp"
                android:layout_marginBottom="-8dp"/>
            <EditText
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:textSize="16sp"
                android:hint="@string/hint_title" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/required_title"
                android:textSize="12sp"
                android:textColor="#FF0000"
                android:layout_marginTop="-4dp"
                android:visibility="gone" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_title"
            android:layout_marginTop="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="12sp"
                android:layout_marginBottom="-8dp" />
            <EditText
                android:id="@+id/text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:textSize="16sp"
                android:hint="@string/hint_description" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/required_description"
                android:textSize="12sp"
                android:textColor="#FF0000"
                android:layout_marginTop="-4dp"
                android:visibility="gone" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_description"
            android:layout_marginTop="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="12sp"
                android:layout_marginBottom="2dp" />
            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-8dp"
                android:hint="@string/hint_category" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/required_category"
                android:textSize="12sp"
                android:textColor="#FF0000"
                android:layout_marginTop="2dp"
                android:visibility="gone" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_category"
            android:layout_marginTop="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/picture"
                android:textSize="12sp"
                android:layout_marginBottom="2dp" />
            <ImageButton
                android:id="@+id/button_choose_picture"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginLeft="-4dp"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_add_a_photo_white_36dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_picture"
            android:layout_marginTop="8dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/display_location"
                    android:textSize="12sp"
                    android:layout_centerVertical="true" />
                <Switch
                    android:id="@+id/switch_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
            <fragment
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_marginTop="2dp"
                app:uiRotateGestures="true"
                app:uiScrollGestures="true"
                app:uiTiltGestures="true"
                app:uiZoomControls="true"
                app:uiZoomGestures="true" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>