<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context=".ui.LoginActivity"
    tools:ignore="Overdraw">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/button_google_sign_in"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/sign_in_with_google"
            android:background="@drawable/common_google_signin_btn_text_light_normal"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:id="@+id/button_facebook_sign_in"
            android:layout_width="244dp"
            android:layout_height="45dp"
            android:text="@string/sign_in_with_facebook"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFF"
            android:background="@color/com_facebook_blue"
            android:paddingLeft="12dp"
            android:paddingStart="12dp"
            android:paddingRight="12dp"
            android:paddingEnd="12dp"
            android:drawableLeft="@drawable/com_facebook_button_icon_white"
            android:drawableStart="@drawable/com_facebook_button_icon_white"
            android:layout_marginTop="8dp"/>
        <TextView
            android:id="@+id/label_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:layout_marginTop="32dp"/>
    </LinearLayout>
</RelativeLayout>